Src files/S3j/S3j.jj
// S3j.jj JavaCC input file for S3j compiler
options 
{
  STATIC = false;         // generate non-static methods

  // set to true to debug token manager
  COMMON_TOKEN_ACTION = false;   

  // pass parser reference to the token manager
  TOKEN_MANAGER_USES_PARSER = true; 
}                                // end of options block
//======================================================
PARSER_BEGIN(S3j)
import java.io.*;
import java.util.ArrayList;
class S3j
{
  private PrintWriter outFile;   
  private S3jSymTab st;
  private S3jCodeGen cg;
  //-----------------------------------------
  public static void main(String[] args) throws 
                                             IOException
  {
    System.out.println("S3j compiler written by ...");
	System.out.println("Jackson Maddox");
    System.out.println("Liangyu Tan");
    System.out.println("Johirul Islam");

    if (args.length != 1)
    {
      System.err.println("Wrong number cmd line args");  
      System.exit(1);
    }

    // build input and output file names
    String inFileName = args[0] + ".s";
    String outFileName = args[0] + ".a";

    // construct file objects
    FileInputStream inFile = 
                       new FileInputStream(inFileName);
    PrintWriter outFile = new PrintWriter(outFileName);

    // identify compiler/author in output file
    outFile.println("; from S3j compiler written by ...");
	outFile.println("; Jackson Maddox");
	outFile.println("; Liangyu Tan");
	outFile.println("; Johirul Islam");

    // construct objects that make up compiler
    S3jSymTab st = new S3jSymTab();
    S3jCodeGen cg = new S3jCodeGen(outFile, st);
    S3j parser = new S3j(inFile);

    // initialize parser's instance variables
    parser.outFile = outFile;
    parser.st = st;   
    parser.cg = cg;

    try 
    {
      parser.program();
    }
    catch(ParseException e) 
    {
      System.err.println(e.getMessage());
      outFile.println(e.getMessage());
      outFile.close();
      System.exit(1);
    }

    outFile.close();
  }
  //-----------------------------------------
  // If COMMON_TOKEN_ACTION is true, the token manager 
  // calls makeComment for each token to create the
  // token trace.
  //
  public void makeComment(Token t)
  {
    outFile.printf(
      "; kd=%3d bL=%3d bC=%3d eL=%3d eC=%3d im= %s%n",
       t.kind, t.beginLine, t.beginColumn, t.endLine, 
       t.endColumn, t.image);
  }
  
  public void makeComment(String s)
  {
    outFile.println("; " + s);
  }
  
  public void makeComment(Token t1, Token t2)
  {
    outFile.print(";");
	while(t1 != t2){
		outFile.print(t1.image + " ");
		t1 = t1.next;
	}
	outFile.println();
  }
}                                          // end of S3j
//======================================================
class S3jSymTab
{
  private ArrayList<String> symbol;
  //-----------------------------------------
  public S3jSymTab()
  {
    symbol = new ArrayList<String>();
  }
  //-----------------------------------------
  public void enter(String s)
  {
    int index = symbol.indexOf(s);

    // if s is not in symbol, then add it
    if (index < 0)
      symbol.add(s);
  }
  //-----------------------------------------
  public String getSymbol(int i)
  {
    return symbol.get(i);
  }
  //-----------------------------------------
  public int getSize()
  {
    return symbol.size();
  }
}                                    // end of S3jSymTab
//======================================================
class S3jCodeGen
{
  private PrintWriter outFile;
  private S3jSymTab st;
  private int labelNumber = 0;
  //-----------------------------------------
  public S3jCodeGen(PrintWriter outFile, S3jSymTab st)
  {
    this.outFile = outFile;
    this.st = st;
  }
  //-----------------------------------------
  public void emitInstruction(String op)
  {
    outFile.printf("          %-4s%n", op); 
  }
  //-----------------------------------------
  public void emitInstruction(String op, String opnd)
  {
    outFile.printf(
                  "          %-4s      %s%n", op, opnd); 
  }
  //-----------------------------------------
  public void emitdw(String label, String value)
  {
    outFile.printf(
             "%-9s dw        %s%n", label + ":", value);
  }
  //-----------------------------------------
  public void endCode()
  {
    outFile.println();
    emitInstruction("halt");

    int size = st.getSize();
    // emit dw for each symbol in the symbol table
    for (int i=0; i < size; i++) 
      emitdw(st.getSymbol(i), "0");
  }
  //-----------------------------------------
  public String getLabel(){
	  return "@L" + labelNumber++;
  }
}                             // end of S3jCodeGen class
PARSER_END(S3j)

// Specification of the S3j token manager ==============

TOKEN_MGR_DECLS:
{
  // called for each token returned to parser
  void CommonTokenAction(Token t)
  {
    parser.makeComment(t);
  }
}
//------------------------------
SKIP:  // these tokens are not returned to parser
{
   " " 
 | 
   "\n" 
 | 
   "\r" 
 | 
   "\t"
 |
   <"//" (~["\n","\r"])*>
}
//------------------------------
TOKEN:  // these tokens are returned to parser
{
   <READINT: "readint">
 |
   <PRINT: "print">
 |
   <PRINTLN: "println">  // must precede <ID> 
 |
   <UNSIGNED: (["0"-"9"])+> 
 |
   <ID: ["A"-"Z","a"-"z"] (["A"-"Z","a"-"z","0"-"9"])*>
 |
   <STRING: "\"" (~["\n", "\r"])* "\"">
 |
   <ASSIGN: "=">
 |
   <SEMICOLON: ";">
 |
   <LEFTPAREN: "(">
 |
   <RIGHTPAREN: ")">
 |
   <PLUS: "+">
 |
   <MINUS: "-">
 |
   <TIMES: "*">
 |
   <FORWARDSLASH: "/">
 |
   <LEFTBRACE: "{">
 |  
   <RIGHTBRACE: "}">
 |
   <ERROR: ~[]>  // matches any single character
}

// Translation grammar for S3

void program(): {}
{  
   statementList() 
   {cg.endCode();}
   <EOF>
}
//------------------------------
void statementList(): {} 
{
   statement() 
   statementList()  
 |  
   {}
}    
//------------------------------
void statement(): {Token t; boolean outComment;} 
{
  {t = getToken(1); outComment = true;}
 (
   assignmentStatement()
 |
   printlnStatement()
 |
   printStatement()
 |
   nullStatement()
 |
   compoundStatement()
   {outComment = false;}
  | 
   readintStatement()
 )
 {if (outComment) makeComment(t, getToken(1));}
}
//------------------------------
void assignmentStatement(): {Token t;}
{
   t=<ID>  
   {st.enter(t.image);} 
   {cg.emitInstruction("pc", t.image);}
   "="
   assignmentTail()
   {cg.emitInstruction("stav");}
   
}
//------------------------------
void assignmentTail() : {Token t;}
{
	LOOKAHEAD(2)
	t = <ID>
	{st.enter(t.image);}
	{cg.emitInstruction("pc", t.image);}
	"="
	assignmentTail()
	{cg.emitInstruction("dupe");}
	{cg.emitInstruction("rot");}
	{cg.emitInstruction("stav");}
   |
	expr()
	";"
}
//------------------------------
void printlnStatement(): {}
{
   "println"
   "("
   ( printArg() | {})
   {cg.emitInstruction("pc", "'\\n'");}
   {cg.emitInstruction("aout");}
   ")"
   ";"
}
//------------------------------
void printStatement(): {}
{
   "print"
   "("
   printArg()
   ")"
   ";"
}
//------------------------------
void printArg(): {Token t; String label;}
{
   t = <STRING>
   {label = cg.getLabel();}
   {cg.emitInstruction("pc", label);}
   {cg.emitInstruction("sout");}
   {cg.emitdw("^" + label, t.image);}
  |
   expr()
   {cg.emitInstruction("dout");}
}


//------------------------------
void nullStatement(): {}
{
   ";"
}
//------------------------------
void compoundStatement(): {}
{
   "{"
   {makeComment("{");}
   statementList()
   "}"
   {makeComment("}");}
}
//------------------------------
void expr(): {}
{
   term()
   termList()
}
//------------------------------
void termList(): {}
{
   "+"
   term()
   {cg.emitInstruction("add");}
   termList()
|  
   "-"
   term()
   {cg.emitInstruction("sub");}
   termList()
|  
   {}
}
//------------------------------
void term(): {}
{
   factor()
   factorList()
}
//------------------------------
void factorList(): {}
{
   "*"  
   factor()
   {cg.emitInstruction("mult");}
   factorList()
 |  
   "/"  
   factor()
   {cg.emitInstruction("div");}
   factorList()
 |
   {}
}
//------------------------------
void factor(): {Token t;} 
{
   t=<UNSIGNED> 
   {cg.emitInstruction("pwc", t.image);}
 |
   "+"
   factor()
 |
   "-"
   negfactor()
 |
   t=<ID> 
   {st.enter(t.image);}
   {cg.emitInstruction("p", t.image);}
 |  
   "(" 
   expr() 
   ")"
}

void negfactor() : {Token t;}
{
	t=<UNSIGNED> 
   {cg.emitInstruction("pwc", "-" + t.image);}
  |
    t = <ID>
	{st.enter(t.image);}
	{cg.emitInstruction("p", t.image);}
	{cg.emitInstruction("neg");}
   |
	"("
	expr()
	")"
	{cg.emitInstruction("neg");}
   |
    LOOKAHEAD(1)
    ("+")+
	{t = getToken(1);}
	(
 	 LOOKAHEAD(1)
	  "-"
	  factor()
	  |
	  factor()
	  {cg.emitInstruction("neg");}
	)
   |
	"-"
	factor()
}
//------------------------------
void readintStatement(): {Token t;}
{
    "readint"
	"("
	t = <ID>
	{cg.emitInstruction("pc", t.image);}
	{cg.emitInstruction("din");}
	{cg.emitInstruction("stav");}
	")"
	";"
	
}
